@@ -18,6 +18,7 @@ wincore.o
 winxtra.o
 winsize.o
 winpos.o
+drag.o
 deskmode.o
 desksvc.o
 deskmsg.o
