@@ -1,24 +1,16 @@
 #include <symbos.h>
 #include "deskmsg.h"
 
-int Menu_Context(unsigned char bank, char* addr, int x, int y) {
+void Menu_Context(unsigned char bank, void* addr, int x, int y) {
     int result;
     _msemaon();
     _symmsg[0] = 52;
     _symmsg[1] = bank;
-    *((char**)(_symmsg + 2)) = addr;
+    *((void**)(_symmsg + 2)) = addr;
     *((int*)(_symmsg + 4)) = x;
     *((int*)(_symmsg + 6)) = y;
     _Desk_Msg();
-    while (_symmsg[0] != 168)
-        _Desk_Wait();
-    if (_symmsg[1] == 0) {
-        _msemaoff();
-        return -1;
-    }
-    result = *((int*)(_symmsg + 2));
     _msemaoff();
-    return result;
 }
 
 char Select_Pos(unsigned short* x, unsigned short* y, unsigned short w, unsigned short h) {
